adding im turbo manifests
Signed-off-by: Ujjwal Chakraborty <53339037+ujjwalchk-it@users.noreply.github.com>

--- a/turbonomic/Operands/im-auth-service.yml
+++ b/turbonomic/Operands/im-auth-service.yml
@@ -2,7 +2,7 @@ apiVersion: devops.turbonomic.io/v1alpha1
 kind: OperatorResourceMapping
 metadata:
   name: auth-service-orm
-  namespace: ebijdua-cpfs
+  namespace: $namespace
 spec:
   mappings:
     patterns:
