added label to ORM files for clean up
Signed-off-by: Henry Li <henry.h.li@ibm.com>

--- a/turbonomic/operands/cert-manager.yml
+++ b/turbonomic/operands/cert-manager.yml
@@ -1,8 +1,10 @@
 apiVersion: devops.turbonomic.io/v1alpha1
 kind: OperatorResourceMapping
 metadata:
-  name: cert-manager-orm
-  namespace: $namespace
+  name: cert-manager-config-orm
+  namespace: {{ placeholder_namespace }}
+  labels:
+    component: cpfs
 spec:
   mappings:
     patterns:
