--- a/turbonomic/operands/orm-common-web-ui.yaml
+++ b/turbonomic/operands/orm-common-web-ui.yaml
@@ -2,6 +2,9 @@ apiVersion: devops.turbonomic.io/v1alpha1
 kind: OperatorResourceMapping
 metadata:
   name: common-web-ui-orm
+  namespace: {{ placeholder_namespace }}
+  labels:
+    component: cpfs
 spec:
   owner: # target same namespace by default
     apiVersion: operators.ibm.com/v1alpha1
