--- a/cp3-networkpolicy/egress/license-service-reporter/ibm-license-service-reporter-egress.yaml
+++ b/cp3-networkpolicy/egress/license-service-reporter/ibm-license-service-reporter-egress.yaml
@@ -2,7 +2,7 @@ kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
   name: ibm-license-service-reporter-deny-all-egress
-  namespace: ibm-licensing-namespace
+  namespace: "lsrNamespace"
 spec:
   podSelector:
     matchLabels:
