--- a/cp3-networkpolicy/egress/license-service-reporter/ibm-license-service-reporter-operator-egress.yaml
+++ b/cp3-networkpolicy/egress/license-service-reporter/ibm-license-service-reporter-operator-egress.yaml
@@ -1,8 +1,8 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: ibm-license-service-reporter-operator-kubernetes-egress
-  namespace: ibm-licensing-namespace
+  name: egress-ibm-license-service-reporter-operator
+  namespace: "lsrNamespace"
 spec:
   egress:
     - ports:
