REVIEW: name, label changes

--- a/cp3-networkpolicy/egress/license-service-reporter/bedrock-egress-ibm-license-service-reporter-operator.yaml
+++ b/cp3-networkpolicy/egress/license-service-reporter/bedrock-egress-ibm-license-service-reporter-operator.yaml
@@ -3,6 +3,8 @@ kind: NetworkPolicy
 metadata:
   name: egress-ibm-license-service-reporter-operator
   namespace: "lsrNamespace"
+  labels:
+    component: cpfs3
 spec:
   egress:
     - ports:
