updated script to accommodate services namespace instead of operator namespace and added cert-manager namespace handling
Signed-off-by: Henry Li <henry.h.li@ibm.com>

--- a/turbonomic/operands/cert-manager.yaml
+++ b/turbonomic/operands/cert-manager.yaml
@@ -2,7 +2,7 @@ apiVersion: devops.turbonomic.io/v1alpha1
 kind: OperatorResourceMapping
 metadata:
   name: cert-manager-config-orm
-  namespace: {{ placeholder_namespace }}
+  namespace: {{ placeholder_cert_namespace }}
   labels:
     component: cpfs
 spec:
