--- a/cp3-networkpolicy/egress/license-service-reporter/bedrock-egress-ibm-license-service-reporter-operator.yaml
+++ b/cp3-networkpolicy/egress/license-service-reporter/bedrock-egress-ibm-license-service-reporter-operator.yaml
@@ -8,10 +8,10 @@ metadata:
 spec:
   egress:
     - ports:
-        - protocol: TCP
-          port: 443
-        - protocol: TCP
-          port: 6443
+      - protocol: TCP
+        port: 443
+      - protocol: TCP
+        port: 6443
       to:
         - podSelector:
             matchLabels:
@@ -27,12 +27,12 @@ spec:
       - port: 5353
         protocol: TCP
       to:
-      - namespaceSelector: {}
-        podSelector:
-          matchLabels:
-            dns.operator.openshift.io/daemonset-dns: default
+        - namespaceSelector: {}
+          podSelector:
+            matchLabels:
+              dns.operator.openshift.io/daemonset-dns: default
   podSelector:
     matchLabels:
-      name: "ibm-license-service-reporter-operator"
+      name: ibm-license-service-reporter-operator
   policyTypes:
   - Egress
