Removed operator orm for opensearch and updated operand namespace placeholder
Signed-off-by: Tamilanban Rajendran <tamilanban.rajendran@ibm.com>

--- a/turbonomic/operands/opensearch-operand-orm.yaml
+++ b/turbonomic/operands/opensearch-operand-orm.yaml
@@ -2,7 +2,7 @@ apiVersion: devops.turbonomic.io/v1alpha1
 kind: OperatorResourceMapping
 metadata:
   name: opensearch-orm
-  namespace: $namespace
+  namespace: {{ placeholder_namespace }}
 spec:
   mappings:
     patterns:
