ILS-247 adjust to envsubst usage

--- a/cp3-networkpolicy/egress/license-service-reporter-manually/ibm-license-service-reporter-oidc-egress.yaml
+++ b/cp3-networkpolicy/egress/license-service-reporter-manually/ibm-license-service-reporter-oidc-egress.yaml
@@ -10,6 +10,6 @@ spec:
   egress:
     - to:
         - ipBlock:
-            cidr: <CIDR of oidc-issuer-url> # Replace with actual CIDR range
+            cidr: ${OIDC-CIRD} # CIDR of OIDC
   policyTypes:
     - Egress
