REVIEW: Unnecessary comment removed
Co-authored-by: Piotr Godowski <piotr.godowski@gmail.com>

--- a/cp3-networkpolicy/egress/license-service-reporter-manually/ibm-license-service-reporter-oidc-egress.yaml
+++ b/cp3-networkpolicy/egress/license-service-reporter-manually/ibm-license-service-reporter-oidc-egress.yaml
@@ -10,6 +10,6 @@ spec:
   egress:
     - to:
         - ipBlock:
-            cidr: ${OIDC-CIRD} # CIDR of OIDC
+            cidr: ${OIDC-CIDF}
   policyTypes:
     - Egress
